fix UL spacing

--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -60,8 +60,8 @@ table {
 		background-color: darken($site-secondary,2%);
 	}
 }
-ul {
-	padding-left: 0;
+ul, ol {
+	padding-left: $grid-gutter-width / 2;
 }
 
 ::selection {
